examples/ex_11_flext_service.expected
[service_core_api]
alias.FlextService_is_s: True
execute.unwrap: 'echo:ok'
result.property: 'echo:ok'
runtime.type: 'ModelPrivateAttr'
runtime.has_config_attr: False
runtime.has_context_attr: False
runtime.has_container_attr: False
context.type: 'FlextContext'
config.type: 'FlextSettings'
container.type: 'FlextContainer'
validate_business_rules.default: True
is_valid.default: True
service_info.type: '_EchoService'
validate_business_rules.override.success: False
validate_business_rules.override.error: 'invalid-rule'
is_valid.override: False
is_valid.exception_guard: False
result.failure.raises: True
result.failure.type: 'BaseError'
auto_execute.declared: True
auto_execute.execute_count_after_init: 1
auto_execute.result: 'auto:1'
auto_execute.execute_count_after_result: 1

[runtime_creation_and_serialization]
create_runtime.default.context: 'FlextContext'
create_runtime.full.container: 'FlextContainer'
create_runtime.full.config: 'FlextSettings'
to_dict.none: ConfigMap(root={})
to_dict.mapping: ConfigMap(root={'a': 1, 'b': 'x'})
to_dict.model: ConfigMap(root={'text': 'hello', 'count': 2})
model_dump.type: 'dict'
model_dump.has_result: True
model_dump_json.type: 'str'

[mixins_and_runtime_methods]
ok.unwrap: 123
fail.error: 'broken'
ensure_result.raw: 'wrapped'
ensure_result.result: 'already'
generate_id.length: 36
generate_prefixed_id.prefix: True
generate_prefixed_id.length: 12
generate_datetime_utc.tz: True
track.context.type: 'dict'
track.has_operation_count: True
track.has_success_rate: True
traverse.success: sequence
traverse.fail_fast: 'odd:3'
accumulate_errors.ok: True
accumulate_errors.fail: 'e1; e2'

[namespace_bootstrap_cqrs_validation]
Bootstrap.create_instance.type: '_TinyType'
Bootstrap.create_instance.init_called: False
CQRS.MetricsTracker.record: True
CQRS.MetricsTracker.get: 5
CQRS.ContextStack.push.dict: True
CQRS.ContextStack.current.type: 'ExecutionContext'
CQRS.ContextStack.pop.handler_name: 'demo'
CQRS.ContextStack.pop.empty: mapping
ProtocolValidation.is_handler: True
ProtocolValidation.is_service: True
ProtocolValidation.is_command_bus: True
ProtocolValidation.protocol_ok: True
ProtocolValidation.protocol_unknown: 'Unknown protocol: UnknownProto. Supported: Handler, Service, CommandBus, Repository, Configurable'
ProtocolValidation.processor_ok: True
ProtocolValidation.processor_bad: "Processor _ProcessorProtocolBad missing required method 'process()'. Processors must implement: process, validate"
Validation.validate_with_result.ok: 'ABC'
Validation.validate_with_result.fail: 'Validation failed: too-short'

[namespace_runtime_and_integration]
Metadata.version: '1.0.0'
Metadata.attributes: mapping
Integration.calls: 'ok'
DependencyIntegration.service: 'obj'
DependencyIntegration.factory: 'factory'
DependencyIntegration.resource.type: 'ConfigMap'
DependencyIntegration.bridge.type: 'DynamicContainer'
DependencyIntegration.service_module.type: 'DynamicContainer'
DependencyIntegration.resource_module.type: 'DynamicContainer'
RuntimeResult.is_success: True
RuntimeResult.is_failure: True
RuntimeResult.value: 5
RuntimeResult.error: 'bad'
RuntimeResult.error_code: 'E_BAD'
RuntimeResult.unwrap_or: 99
RuntimeResult.unwrap_or_else: 11
RuntimeResult.map: 7
RuntimeResult.flat_map: 15
RuntimeResult.and_then: 6
RuntimeResult.flow_through: 12
RuntimeResult.fold.success: 's:5'
RuntimeResult.fold.failure: 'f:bad'
RuntimeResult.tap: True
RuntimeResult.tap_error: True
RuntimeResult.tap.values: sequence
RuntimeResult.tap_error.values: sequence
RuntimeResult.map_error: 'x:bad'
RuntimeResult.filter.pass: True
RuntimeResult.filter.fail: 'Filter predicate failed'
RuntimeResult.alt: 'alt:bad'
RuntimeResult.lash: 3
RuntimeResult.recover: 3
RuntimeResult.operator_or: 77
RuntimeResult.bool.success: True
RuntimeResult.bool.failure: False
RuntimeResult.repr.success: 'r.ok(5)'
RuntimeResult.repr.failure: "r.fail('bad')"
RuntimeResult.context_manager: 5
RuntimeResult.ok.none_raises: True
RuntimeResult.ok.none_type: 'ValueError'
compare_entities_by_id.true: True
compare_entities_by_id.false: False
hash_entity_by_id.type: 'int'
compare_value_objects_by_value: True
hash_value_object_by_value.type: 'int'
ensure_trace_context.has_trace_id: True
ensure_trace_context.has_span_id: True
ensure_trace_context.has_correlation_id: True
validate_http_status_codes.ok: sequence
validate_http_status_codes.fail: 'Invalid HTTP status code: 99 (must be 100-599)'
